other/block-large-images/.chainsaw-test/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
      - name: busybox02
        image: nvidia/cuda:12.2.0-devel-ubi8
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: nvidia/cuda:12.2.0-devel-ubi8
          - name: busybox02
            image: busybox:1.35
          restartPolicy: OnFailure
