other/block-large-images/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: image-vol
    image: nvidia/cuda:12.2.0-devel-ubi8
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: image-vol
    image: nvidia/cuda:12.2.0-devel-ubi8
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: image-vol
    image: nvidia/cuda:12.2.0-devel-ubi8
  - name: busybox
    image: busybox:1.35
