other/block-large-images/.chainsaw-test/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.28
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.28
  - name: busybox02
    image: busybox:1.28
